# ros2_android_examples

./: .gitignore  .travis.yml  README.md  android_prepare.sh  build.gradle  modules.gradle
ros2_android_listener/: build.gradle  package.xml
ros2_android_listener/gradle/wrapper/: gradle-wrapper.properties
ros2_android_listener/src/main/: AndroidManifest.xml
ros2_android_listener/src/main/java/org/ros2/android/examples/listener/: ROS2AndroidListenerActivity.java  ROS2AndroidListenerApplication.java  ROS2ListenerActivity.java
ros2_android_listener/src/main/res/values/: strings.xml
ros2_android_talker/: build.gradle  package.xml
ros2_android_talker/gradle/wrapper/: gradle-wrapper.properties
ros2_android_talker/src/main/: AndroidManifest.xml
ros2_android_talker/src/main/java/org/ros2/android/examples/hardware/sensor/: AccelerometerSensorNode.java  AmbientTemperatureSensorNode.java  BarometerSensorNode.java  CameraSensorNode.java  CompassSensorNode.java  GyroscopeSensorNode.java  ImuSensorNode.java  LightSensorNode.java  ProximitySensorNode.java
ros2_android_talker/src/main/java/org/ros2/android/examples/talker/: AccelerometerSensorNode.java  AmbientTemperatureSensorNode.java  LightSensorNode.java  ROS2AndroidTalkerActivity.java  ROS2AndroidTalkerApplication.java
ros2_android_talker/src/main/java/org/ros2/android/hardware/: AbstractSensorAdapter.java  AbstractSensorNode.java  AccelerometerSensorAdapter.java  AmbientTemperatureSensorAdapter.java  LightSensorAdapter.java  SensorAdapter.java
ros2_android_talker/src/main/java/org/ros2/android/hardware/sensor/: AbstractSensorNode.java  AmbientTemperatureSensorAdapter.java  CompassSensorAdapter.java
ros2_android_talker/src/main/res/values/: strings.xml
ros2_listener_android/: build.gradle  package.xml
ros2_listener_android/src/main/: AndroidManifest.xml
ros2_talker_android/: build.gradle  package.xml
ros2_talker_android/gradle/wrapper/: gradle-wrapper.properties
ros2_talker_android/src/main/: AndroidManifest.xml
ros2_talker_android/src/main/java/org/ros2/examples/android/talker/: ROS2TalkerActivity.java
(+1 files in other folders)
